# n64-controller

./: README.md  links.txt
Datasheets/n64-mainboard/: source.txt
Doc/Hardware/: fhnwreport.cls
Doc/Hardware/bibliography/: bibliography.bib
Doc/Hardware/sections/: abstract.tex  appendix.tex
Doc/Report/: .gitignore  n64-controller-hardware.tex
Doc/Report/preamble/: packages.tex  title.tex
Doc/Report/sections/: hardware.tex
Doc/Report/sections/hardware/: pm.tex
Firmware/include/n64c/: osc.h
Firmware/n64-controller.X/: .gitignore
Firmware/n64-controller.X/nbproject/: configurations.xml  project.xml
Firmware/src/: main.c  osc.c
Frontend/: .gitignore  CMakeLists.txt
Frontend/application/: CMakeLists.txt
Frontend/application/src/: main.c
Frontend/n64c/: CMakeLists.txt
Frontend/n64c/forms/: ControllerPakTool.ui  MainWindow.ui
Frontend/n64c/include_private/n64c/: ContextPaneUser.hpp  DeviceSettings.hpp
Frontend/n64c/include_private/n64c/models/nodes/: BooleanData.hpp  FloatData.hpp  MathOperationModel.hpp  N64ControllerInputDataModel.hpp  N64ControllerOutputDataModel.hpp
Frontend/n64c/include_private/n64c/views/: ProfileView.hpp
Frontend/n64c/src/: ContextPaneUser.cpp  ControllerPakTool.cpp  api.cpp
Frontend/n64c/src/models/nodes/: BooleanData.cpp  FloatData.cpp  MathOperationModel.cpp  N64ControllerInputDataModel.cpp  N64ControllerOutputDataModel.cpp
Frontend/n64c/src/views/: ContextPaneUser.cpp  ControllerPakTool.cpp  DeviceSettings.cpp  MainWindow.cpp  NodeEditor.cpp  ProfileView.cpp  ToolsPane.cpp
Frontend/n64c/translations/: n64c_de.ts
Hardware/: .gitignore  Bluetooth.Harness  Bluetooth.SchDoc  Buttons.Harness  Buttons.SchDoc  EEPROM.Harness  EEPROM.SchDoc  Electrical.SchDoc  LEDs.Harness  LEDs.SchDoc  MCU.Harness  MCU.SchDoc  N64Connector.SchDoc  N64_Controller.PrjPcb  PCB1.PcbDoc  Power.Harness  Power.SchDoc  Rumble.Harness  Rumble.SchDoc  Sheet1.SchDoc  TopSheet.SchDoc  USB.Harness  USB.SchDoc
Hardware/N64_Controller/: .gitignore  Buttons.Harness  Buttons.SchDoc  Electrical.SchDoc  LEDs.SchDoc  MCU.Harness  MCU.SchDoc  N64Connector.Harness  N64_Controller.PrjPcb  PCB1.PcbDoc  Power.SchDoc  Rumble.SchDoc  USB.Harness  USB.SchDoc
Hardware/nRF52840-QIAA Reference Layout 1_1/Altium Designer files/: nrf52840_qiaa_var1.PcbDoc  nrf52840_qiaa_var1.PrjPCB  nrf52840_qiaa_var1.SchDoc  nrf52840_qiaa_var2.PcbDoc  nrf52840_qiaa_var2.PrjPCB  nrf52840_qiaa_var2.SchDoc  nrf52840_qiaa_var3.PcbDoc  nrf52840_qiaa_var3.PrjPCB  nrf52840_qiaa_var3.SchDoc  nrf52840_qiaa_var4.PcbDoc  nrf52840_qiaa_var4.PrjPCB  nrf52840_qiaa_var4.SchDoc  nrf52840_qiaa_var5.PcbDoc  nrf52840_qiaa_var5.PrjPCB  nrf52840_qiaa_var5.SchDoc  nrf52840_qiaa_var6.PcbDoc  nrf52840_qiaa_var6.PcbDoc.htm  nrf52840_qiaa_var6.PrjPCB  nrf52840_qiaa_var6.SchDoc
Hardware/nRF52840-QIAA Reference Layout 1_1/Altium Designer files/__Previews/: nrf52840_qiaa_var6.PcbDocPreview  nrf52840_qiaa_var6.SchDocPreview
Hardware/nRF52840-QIAA Reference Layout 1_1/Bill of Materials/: nrf52840_qiaa_var1_bom.xls  nrf52840_qiaa_var2_bom.xls  nrf52840_qiaa_var3_bom.xls  nrf52840_qiaa_var4_bom.xls  nrf52840_qiaa_var5_bom.xls  nrf52840_qiaa_var6_bom.xls
Hardware/nRF52840-QIAA Reference Layout 1_1/Production files/: nrf52840_qiaa_var1.DRL  nrf52840_qiaa_var1.DRR  nrf52840_qiaa_var1.G1  nrf52840_qiaa_var1.G2  nrf52840_qiaa_var1.GBL  nrf52840_qiaa_var1.GM1  nrf52840_qiaa_var1.GM16  nrf52840_qiaa_var1.GTL  nrf52840_qiaa_var1.GTO  nrf52840_qiaa_var1.GTP  nrf52840_qiaa_var1.GTS  nrf52840_qiaa_var1.TXT  nrf52840_qiaa_var1_pick_and_place.txt  nrf52840_qiaa_var2.DRL  nrf52840_qiaa_var2.DRR  nrf52840_qiaa_var2.G1  nrf52840_qiaa_var2.G2  nrf52840_qiaa_var2.GBL  nrf52840_qiaa_var2.GBO  nrf52840_qiaa_var2.GTL  nrf52840_qiaa_var2.GTO  nrf52840_qiaa_var2.GTP  nrf52840_qiaa_var2.GTS  nrf52840_qiaa_var2.TXT  nrf52840_qiaa_var2_pick_and_place.txt  nrf52840_qiaa_var3.DRL  nrf52840_qiaa_var3.DRR  nrf52840_qiaa_var3.G1  nrf52840_qiaa_var3.G2  nrf52840_qiaa_var3.GBL  nrf52840_qiaa_var3.GBP  nrf52840_qiaa_var3.GBS  nrf52840_qiaa_var3.GM1  nrf52840_qiaa_var3.GM16  nrf52840_qiaa_var3.GTL  nrf52840_qiaa_var3.GTO  nrf52840_qiaa_var3.GTP  nrf52840_qiaa_var3.GTS  nrf52840_qiaa_var3.TXT  nrf52840_qiaa_var3_pick_and_place.txt  (+41 more)
Hardware/nRF5340 Preview Development Kit - Hardware files 0_8_0/PCA10095-nRF5340 Preview Development Board 0_8_0/Altium Designer files/: pca10095.IntLib  pca10095.PrjPCB  pca10095_sheet1_cover.SchDoc  pca10095_sheet2_nrf5340_mcu.Harness  pca10095_sheet2_nrf5340_mcu.SchDoc  pca10095_sheet3_interface_mcu.Harness  pca10095_sheet3_interface_mcu.SchDoc  pca10095_sheet4_misc.Harness  pca10095_sheet4_misc.SchDoc  pca10095_sheet5_connectors.Harness  pca10095_sheet5_connectors.SchDoc  pca10095_sheet6_power_supply.SchDoc
Hardware/nRF5340 Preview Development Kit - Hardware files 0_8_0/PCA10095-nRF5340 Preview Development Board 0_8_0/Altium Designer files/__Previews/: 400432.PcbDocPreview  pca10095_sheet1_cover.SchDocPreview  pca10095_sheet2_nrf5340_mcu.SchDocPreview  pca10095_sheet3_interface_mcu.SchDocPreview  pca10095_sheet5_connectors.SchDocPreview  pca10095_sheet6_power_supply.SchDocPreview
Hardware/nRF5340 Preview Development Kit - Hardware files 0_8_0/PCA10095-nRF5340 Preview Development Board 0_8_0/Production files/BOM/: PCA10095_BOM_Web.xls
Hardware/nRF5340 Preview Development Kit - Hardware files 0_8_0/PCA64110-NFC Antenna Flexprint 1_0_0/Altium Designer files/: 400148.PcbDoc.htm  pca64110.PrjPCB
Mechanical/: housing_top.STEP
Simulations/: debounce.asc  n64-transmission.asc
frontend/: CMakeLists.txt  README.md
frontend/n64c/: CMakeLists.txt
frontend/n64c/forms/: DeviceSettings.ui  MainWindow.ui  NodeEditor.ui  ProfileView.ui
frontend/n64c/include_private/n64c/: ControllerPakTool.hpp  MainWindow.hpp  NodeEditor.hpp  ProfileView.hpp  ToolsPane.hpp
frontend/n64c/include_public/n64c/: api.h
frontend/n64c/src/: DeviceSettings.cpp  MainWindow.cpp  NodeEditor.cpp  ProfileView.cpp  ToolsPane.cpp
(+21 files in other folders)
